k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idistinguishr
  namespace: idistinguishr
spec:
  type: ClusterIP
  selector:
    app: idistinguishr
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
